--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar>
-  <h1>Hello</h1>
-</app-navbar>
+  <div class="content"><app-blueprints-list></app-blueprints-list></div
+></app-navbar>
