Added stubs for profile menu, profile view, and upload blueprint pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navbar>
-  <div class="content"><app-blueprints-list></app-blueprints-list></div
-></app-navbar>
+  <div class="content">
+    <app-blueprints-list></app-blueprints-list>
+    <app-profile-view></app-profile-view>
+    <app-profile-menu></app-profile-menu>
+    <app-upload-blueprint></app-upload-blueprint>
+  </div>
+</app-navbar>
