Added homepage and missing page pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-navbar>
   <div class="content">
-    <app-blueprints-list></app-blueprints-list>
-    <app-profile-view></app-profile-view>
-    <app-profile-menu></app-profile-menu>
-    <app-upload-blueprint></app-upload-blueprint>
+    <router-outlet></router-outlet>
   </div>
 </app-navbar>
