--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,11 +9,15 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#"><mat-icon>storage</mat-icon>Blueprints</a>
-      <a mat-list-item href="#"
+      <a mat-list-item routerLink="/blueprints"
+        ><mat-icon>storage</mat-icon>Blueprints</a
+      >
+      <a mat-list-item routerLink="/upload"
         ><mat-icon>cloud_upload</mat-icon>Upload Blueprint</a
       >
-      <a mat-list-item href="#"><mat-icon>person</mat-icon>View Profile</a>
+      <a mat-list-item routerLink="/profile"
+        ><mat-icon>person</mat-icon>View Profile</a
+      >
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
