--- a/src/app/profile-menu/profile-menu.component.html
+++ b/src/app/profile-menu/profile-menu.component.html
@@ -1,1 +1,22 @@
-<h1>Profile Menu Component</h1>
+<h1>Search for player</h1>
+
+<p>Search for the player's profile you want to look at!</p>
+
+<form class="example-form">
+  <mat-form-field class="example-full-width" class="inline">
+    <mat-label>Player Username</mat-label>
+    <input matInput #message maxlength="64" placeholder="factorioplayer123" />
+    <mat-hint align="start"
+      ><strong>Don't disclose personal info</strong>
+    </mat-hint>
+    <mat-hint align="end">{{ message.value.length }} / 64</mat-hint>
+  </mat-form-field>
+  <button
+    mat-button
+    color="primary"
+    [routerLink]="['/profile', message.value]"
+    class="inline"
+  >
+    SEARCH
+  </button>
+</form>
