--- a/src/app/blueprints-list/blueprints-list.component.html
+++ b/src/app/blueprints-list/blueprints-list.component.html
@@ -2,3 +2,8 @@
 
 Hi
 <p>{{ blueprint_ids }}</p>
+
+<app-summary-card [blueprint_id]="5"></app-summary-card>
+<app-summary-card [blueprint_id]="6"></app-summary-card>
+<app-summary-card [blueprint_id]="7"></app-summary-card>
+<app-summary-card [blueprint_id]="14"></app-summary-card>
