--- a/src/app/summary-card/summary-card.component.html
+++ b/src/app/summary-card/summary-card.component.html
@@ -20,7 +20,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>VIEW</button>
+    <button mat-button routerLink="/blueprint/{{ blueprint_id }}">VIEW</button>
     <button mat-button>ADD</button>
   </mat-card-actions>
 </mat-card>
