Added addition feature

--- a/src/app/summary-card/summary-card.component.html
+++ b/src/app/summary-card/summary-card.component.html
@@ -27,6 +27,13 @@
     >
       VIEW
     </button>
-    <button mat-button mat-raised-button color="primary">ADD</button>
+    <button
+      mat-button
+      mat-raised-button
+      color="primary"
+      (click)="openDialog(blueprint_id)"
+    >
+      ADD
+    </button>
   </mat-card-actions>
 </mat-card>
