--- a/src/app/blueprints-list/blueprints-list.component.html
+++ b/src/app/blueprints-list/blueprints-list.component.html
@@ -1,7 +1,11 @@
 <h1>Recent Blueprints</h1>
 
-<div class="summary-list">
+<div *ngIf="blueprint_ids" class="summary-list">
   <ng-container *ngFor="let id of blueprint_ids">
     <app-summary-card [blueprint_id]="id"></app-summary-card>
   </ng-container>
+</div>
+
+<div class="loading" *ngIf="!blueprint_data">
+  <mat-spinner></mat-spinner>
 </div>
