Added copying blueprint book functionality

--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -5,7 +5,7 @@
     >Created date: {{ user_data.created_date }}
   </mat-card-subtitle>
 
-  <button mat-raised-button color="primary">
+  <button mat-raised-button color="primary" (click)="copyBlueprintBookString()">
     COPY BLUEPRINT BOOK
   </button>
 
