--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,22 @@
-<h1>Factorio Blueprint Keeper</h1>
+<div class="canvas">
+  <br />
+  <br />
+  <br />
+  <h1 class="mat-display-3">Factorio Blueprint Keeper</h1>
+
+  <p>Your one stop shop to store your favorite Factorio blueprints!</p>
+
+  <p class="mat-title">Let's get started!</p>
+
+  <button class="selector" mat-raised-button routerLink="/blueprints">
+    Recent Blueprints
+  </button>
+  <button class="selector" mat-raised-button routerLink="/upload">
+    Upload Blueprints
+  </button>
+  <button class="selector" mat-raised-button routerLink="/profile">
+    View Profile
+  </button>
+</div>
+
+<app-blueprints-list></app-blueprints-list>
