--- a/src/app/blueprints-list/blueprints-list.component.html
+++ b/src/app/blueprints-list/blueprints-list.component.html
@@ -7,7 +7,6 @@
 </div>
 
 <ng-template #showLoading>
-  <div class="loading">
-    <mat-spinner></mat-spinner>
-  </div>
+  <mat-spinner *ngIf="!notFound"></mat-spinner>
+  <p *ngIf="notFound">No blueprints found!</p>
 </ng-template>
